config-root/namespaces/jx-production/budget/budget-budget-deploy.yaml
# Source: budget/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-budget
  labels:
    draft: draft-app
    chart: "budget-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'budget'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: budget-budget
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: budget-budget
    spec:
      serviceAccountName: budget-budget
      containers:
        - name: budget
          image: "10.108.189.220/implement1/budget:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
